Fix card padding on Safari

--- a/blackjack/src/styles.css
+++ b/blackjack/src/styles.css
@@ -5,9 +5,6 @@
 #dealersHand,
 #playersHands > div {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: center; /* Center the hand */
-  overflow-x: auto;
   border: 1px solid #ccc;
   padding: 11px;
   margin-bottom: 15px;
@@ -20,7 +17,10 @@
   min-width: 22vh;
   background-color: rgb(9, 59, 9);
   overflow: hidden;
+  align-items: start; 
+  justify-content: center;
 }
+
 
 #dealersHand img,
 #playersHands > div img {
